test/mergeImplicitForget3.slq
def main() {
	x:=H(0:ğ”¹);
	if x {
		a:=(0:ğ”¹,1:ğ”¹):ğ”¹^2; /// error
	} else {
		a:=H(1:ğ”¹);
	}
	forget(H(x)=0);
}
